--- a/styles/UserData.css
+++ b/styles/UserData.css
@@ -31,3 +31,90 @@
   width: 80px;
   left: 50%;
 }
+
+.loader-container {
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader {
+  height: 70px;
+  display: flex;
+  align-items: center;
+}
+
+.loader .stroke {
+  display: block;
+  position: relative;
+  background: #f1f1f1;
+  height: 100%;
+  width: 10px;
+  border-radius: 50px;
+  margin: 0 5px;
+  animation: animate 1.2s linear infinite;
+}
+
+.loader .stroke-alt {
+  display: block;
+  position: relative;
+  background: #000;
+  height: 100%;
+  width: 10px;
+  border-radius: 50px;
+  margin: 0 5px;
+  animation: animate 1.2s linear infinite;
+}
+
+@keyframes animate {
+  50% {
+    height: 20%;
+  }
+  100% {
+    height: 100%;
+  }
+}
+
+.stroke:nth-child(1) {
+  animation-delay: 0s;
+}
+.stroke:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.stroke:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.stroke:nth-child(4) {
+  animation-delay: 0.9s;
+}
+.stroke:nth-child(5) {
+  animation-delay: 0.6s;
+}
+.stroke:nth-child(6) {
+  animation-delay: 0.3s;
+}
+.stroke:nth-child(7) {
+  animation-delay: 0s;
+}
+.stroke-alt:nth-child(1) {
+  animation-delay: 0s;
+}
+.stroke-alt:nth-child(2) {
+  animation-delay: 0.3s;
+}
+.stroke-alt:nth-child(3) {
+  animation-delay: 0.6s;
+}
+.stroke-alt:nth-child(4) {
+  animation-delay: 0.9s;
+}
+.stroke-alt:nth-child(5) {
+  animation-delay: 0.6s;
+}
+.stroke-alt:nth-child(6) {
+  animation-delay: 0.3s;
+}
+.stroke-alt:nth-child(7) {
+  animation-delay: 0s;
+}
