--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,7 +93,24 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  background: linear-gradient(-45deg,#e66465, #9198e5);
+  background-size: 200% 200%;
+	animation: gradient 15s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
 
 a {
   color: inherit;
@@ -105,3 +122,4 @@ a {
     color-scheme: dark;
   }
 }
+
